# oemof-tabular-plugins

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE.txt  README.rst  RELEASE_PROCEDURE.md  USERS.cff  capacities_kpis_units.py  index.html  mkdocs.yml  objects.inv  prepare_release.py  pyproject.toml
.github/workflows/: tests.yml
code/: index.html
code/code_example/: index.html
code/install/: index.html
code/style/: index.html
code/usage/: index.html  input_parameters.csv
code/usage/postprocessing/: index.html
development/best-practice/: index.html
development/collaboration/: index.html
development/documentation/: index.html
development/git/: index.html
development/release/: index.html
docs/: index.md
docs/code/: code_example.md
docs/css/: extra.css
examples/scripts/: compute.py  energy_system  results.py
no_index/: index.html
requirements/: all_requirements.txt  build_requirements.txt  dev_requirements.txt  doc_requirements.txt  linter_requirements.txt
src/: __init__.py
src/general/: __init__.py  constraints.py  postprocessing.py
src/oemof-tabular-plugins/: __init__.py
src/oemof_tabular_plugins/: __init__.py  _version.py
tests/: test_post_processing.py  test_pre_processing.py  test_water_components.py
tests/test_inputs/: no_annuity_cost.csv
tests/test_inputs_pre_processing/: annuity_all_cost_params_some_empty.csv  annuity_empty_all_cost_params_defined.csv  annuity_empty_no_cost_params.csv  no_annuity_all_cost_params_defined.csv  no_annuity_no_cost_params.csv
(+546 files in other folders)
